# armadillo_matrix

./: CMakeLists.txt  package.xml  tue-manifest.xml
include/armadillo_bits/: config.hpp
